--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,63 @@
 body{
     margin: 0;
     font-family: 'Times New Roman', Times, serif;
-background-color: antiquewhite;
-}
-label{
-margin: 10px;
+    background-color: antiquewhite;
 }
 
-.App{
-display: flex;
+*{
+    box-sizing: border-box;
+}
+
+/* nav {
+    position: sticky;
+    top: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 1.5rem 2rem;
+    background-color: #eaeaea;
+    transition: top 500ms ease-in-out;
+} */
+
+
+ .App{
+
 align-items: center;
 justify-content: center;
 text-align: center;
 flex-direction: column;
-}
 
+} 
+#formulario{    
+    background-color: rgb(255, 255, 255);
+}
+/* .links{
+    display:flex;
+    margin: 0 -1em;
+}
+.links a {
+display: inline-block;
+margin: 0 1em;
+} */
+/* .logo{
+    font-weight: bold;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    
+} */
+
+/* nav a {
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+} */
+
+
+
+
+
+label{
+    margin: 10px;
+    }
+    
