--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+
 body{
     margin: 0;
     font-family: 'Times New Roman', Times, serif;
@@ -8,6 +9,92 @@ body{
 *{
     box-sizing: border-box;
 }
+.carga {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: #393e46ee;
+    line-height: 100vh;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: desvanecer 6s linear;
+}
+@keyframes desvanecer{
+    0%
+    {
+      opacity: 1;
+    }
+    50%
+    {
+      opacity: 1;
+    }
+    70%
+    {
+      opacity: 0;
+    }
+    100%
+    {
+      opacity: 0;
+    }
+  }
+
+.imagenCarga {
+    width: 10rem;
+    position: absolute;
+    
+}
+
+.carga svg{
+    width: 16rem;
+    height: 16rem; 
+    transform: rotate(-90deg);
+  }
+  
+.carga svg circle{
+    width: 100%;
+    height: 100%;
+    fill: none;
+    stroke-width: 2;  
+    
+    stroke: rgb(19, 197, 43);
+    stroke-linecap: round;
+    stroke-dasharray: 400;
+    stroke-dashoffset: 400;
+    animation: animateC 6s linear;
+    
+  }
+  
+  @keyframes animateC{
+    0%
+    {
+      stroke-dashoffset: 400;
+    }
+    20%
+    {
+      stroke-dashoffset: 300;
+    }
+  
+    30%
+    {
+      stroke-dashoffset: 240;
+      
+    }
+  
+    50%
+    {
+      stroke-dashoffset: 143;
+      stroke: rgb(0, 217, 255);
+      
+    }
+    100%
+    {
+      stroke-dashoffset: 0;
+      
+    }
+    
+  }
 .navbar{
     margin: 0;
     height:50px;
@@ -42,8 +129,11 @@ align-items: center;
 justify-content: center;
 text-align: center;
 flex-direction: column;
-
+opacity: 0;
 } 
+.imgNav{
+    width: 4rem;
+}
 #formulario{  
     background-color: #4ecca270;
     border-radius: 10px; 
@@ -251,4 +341,30 @@ label{
         grid-auto-rows: 5rem;
         grid-template-columns: repeat(auto-fill, minmax(5rem, 1fr));
     }
+    .imgNav{
+        max-width: 2.70rem;   
+        
+    }
 }
+@media (max-width: 990px) {
+    #formulario input,textarea{  
+        width: 100%;
+
+    }
+    .fondo{
+        opacity: 0;
+    }
+    #navbarNav{
+     background-color: #393e46ee;
+    }
+    .tecnologias {
+        gap: 2rem;
+        grid-auto-rows: 5rem;
+        grid-template-columns: repeat(auto-fill, minmax(5rem, 1fr));
+    }
+    .imgNav{
+        max-width: 2.70rem;   
+        
+    }
+}
+
