--- a/assets/Sass/main.scss
+++ b/assets/Sass/main.scss
@@ -1,5 +1,3 @@
-@use 'animaciones';
-
 body{
     margin: 0;
     font-family: 'Times New Roman', Times, serif;
@@ -314,27 +312,18 @@ background-color: #393e46fb;
 color: white;
 font-weight: bold;
 }
-/* .links{
-    display:flex;
-    margin: 0 -1em;
-}
-.links a {
-display: inline-block;
-margin: 0 1em;
-} */
-/* .logo{
-    font-weight: bold;
-    letter-spacing: 0.2em;
-    text-transform: uppercase;
-    
-} */
 
-/* nav a {
-    color: black;
-    text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: 0.2em;
-} */
+@keyframes mostarBarras{
+        
+    0%{
+        
+        transform: translateX(-100%);
+          
+    }
+    100%{
+        transform: translateX(0);
+    }
+}
 label{
     margin: 10px;
     }
