--- a/assets/Sass/main.scss
+++ b/assets/Sass/main.scss
@@ -7,92 +7,6 @@ body{
 *{
     box-sizing: border-box;
 }
-.carga {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    background-color: #393e46ee;
-    line-height: 100vh;
-    z-index: 10;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    animation: desvanecer 6s linear;
-}
-@keyframes desvanecer{
-    0%
-    {
-      opacity: 1;
-    }
-    50%
-    {
-      opacity: 1;
-    }
-    70%
-    {
-      opacity: 0;
-    }
-    100%
-    {
-      opacity: 0;
-    }
-  }
-
-.imagenCarga {
-    width: 10rem;
-    position: absolute;
-    
-}
-
-.carga svg{
-    width: 16rem;
-    height: 16rem; 
-    transform: rotate(-90deg);
-  }
-  
-.carga svg circle{
-    width: 100%;
-    height: 100%;
-    fill: none;
-    stroke-width: 2;  
-    
-    stroke: rgb(19, 197, 43);
-    stroke-linecap: round;
-    stroke-dasharray: 400;
-    stroke-dashoffset: 400;
-    animation: animateC 6s linear;
-    
-  }
-  
-  @keyframes animateC{
-    0%
-    {
-      stroke-dashoffset: 400;
-    }
-    20%
-    {
-      stroke-dashoffset: 300;
-    }
-  
-    30%
-    {
-      stroke-dashoffset: 240;
-      
-    }
-  
-    50%
-    {
-      stroke-dashoffset: 143;
-      stroke: rgb(0, 217, 255);
-      
-    }
-    100%
-    {
-      stroke-dashoffset: 0;
-      
-    }
-    
-  }
 .navbar{
     margin: 0;
     height:50px;
@@ -197,3 +111,218 @@ opacity: 0;
     overflow: hidden;
     background-color: white;
 }
+
+#equipo{
+    font-size: .60em;
+    color: rgba(204, 204, 204, 0);
+    border-radius: 5px 5px 5px 5px;        
+    width: 97%;
+    background: linear-gradient(270deg,#018a08ce,hsla(110, 100%, 50%, 0.692));
+}
+#perseverancia{
+    font-size: .60em;
+    color: rgba(204, 204, 204, 0);
+    border-radius: 5px 5px 5px 5px;        
+    width: 90%;
+    background: linear-gradient(270deg,#018a08ce,hsla(110, 100%, 50%, 0.692));
+}
+#aprendizaje{
+    font-size: .60em;
+    color: rgba(204, 204, 204, 0);
+    border-radius: 5px 5px 5px 5px;        
+    width: 94%;
+    background: linear-gradient(270deg,#018a08ce,hsla(110, 100%, 50%, 0.692));
+}
+#orientacion{
+    font-size: .60em;
+    color: rgba(204, 204, 204, 0);
+    border-radius: 5px 5px 5px 5px;        
+    width: 86%;
+    background: linear-gradient(270deg,#018a08ce,hsla(110, 100%, 50%, 0.692)); 
+}
+#proyectos{
+    background-color: #393e46b0; 
+    color: white;
+    border-radius: 0px 0px 15px 15px;
+}
+#metodologias{
+    background-color: #393e46b0; 
+    color: white;
+    border-radius: 15px 15px 15px 15px;
+}
+#patrones{
+    background-color: #393e46b0; 
+    color: white;
+    border-radius: 15px 15px 15px 15px;
+}
+#scrum{
+    font-size: .60em;
+    color: rgba(204, 204, 204, 0);
+    border-radius: 5px 5px 5px 5px;           
+    background: linear-gradient(270deg,#6a018ace,hsla(110, 100%, 50%, 0.692)); 
+    width: 70%;    
+    
+}
+
+
+#mvc{
+    font-size: .60em;
+    color: rgba(204, 204, 204, 0);
+    border-radius: 5px 5px 5px 5px;        
+    width: 90%;
+    background: linear-gradient(270deg,#01218ace,hsla(110, 100%, 50%, 0.692)); 
+}
+#mvp{
+    font-size: .60em;
+    color: rgba(204, 204, 204, 0);
+    border-radius: 5px 5px 5px 5px;        
+    width: 75%;
+    background: linear-gradient(270deg,#01218ace,hsla(110, 100%, 50%, 0.692)); 
+}
+a{
+    color: black;
+    text-decoration: none;
+
+}
+.proyectoSoft{
+    padding: 0;
+    max-width: 100%;
+    max-height: 18rem;
+    transition: transform .2s;
+    &:hover{
+        transform: scale(1.1);
+    }
+}
+
+// #grid-proyecto{
+//     display: grid;
+//     gap: 1rem;
+//     grid-auto-rows: auto;
+//     grid-template-columns: repeat(auto-fill, minmax(17rem, 1fr));
+//     font-size: 1rem;
+   
+// }
+.proyecto{ 
+    min-height: 20rem; 
+    max-height: auto;
+    margin-bottom: 10px;
+}
+input,textarea{    
+width: 70%;
+margin: 10px;
+border: none;
+}
+.fondo img{
+    position: absolute;
+    left: 0;
+    top: 50px;
+    max-width: 68.5%;
+}
+input:hover,textarea:hover{    
+    width: 74%;
+    border-bottom: 1px solid rgb(0, 0, 0);
+    }
+input[type=submit]:hover{
+background-color: #393e46fb;
+color: white;
+font-weight: bold;
+}
+
+@keyframes mostarBarras{
+        
+    0%{
+        
+        transform: translateX(-100%);
+          
+    }
+    100%{
+        transform: translateX(0);
+    }
+}
+label{
+    margin: 10px;
+    }
+
+@media (max-width: 400px) {
+    #formulario input,textarea{  
+        width: 100%;
+
+    }
+    #navbarNav{
+     background-color: #393e46ee;
+    }
+    .tecnologias {
+        gap: 2rem;
+        grid-auto-rows: 5rem;
+        grid-template-columns: repeat(auto-fill, minmax(5rem, 1fr));
+    }
+    .imgNav{
+        max-width: 2.70rem;   
+        
+    }
+}
+@media (max-width: 990px) {
+    #formulario input,textarea{  
+        width: 100%;
+
+    }
+    .fondo{
+        opacity: 0;
+    }
+    #navbarNav{
+     background-color: #393e46ee;
+    }
+    .tecnologias {
+        gap: 2rem;
+        grid-auto-rows: 5rem;
+        grid-template-columns: repeat(auto-fill, minmax(5rem, 1fr));
+    }
+    .imgNav{
+        max-width: 2.70rem;   
+        
+    }
+}
+.carga {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: #393e46ee;
+    line-height: 100vh;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: desvanecer 6s linear;
+}
+.imagenCarga {
+    width: 15rem;
+    animation: logoCargaRotar 3s;
+}
+.moverLogoCarga{
+    animation: logoCargaEntrada 3s;
+    position: absolute;
+    
+}
+
+
+  //Nueve el logo de izquierda a derecha
+  @keyframes logoCargaEntrada{      
+    0%{       
+        transform: translateX(-1000px);
+                 
+    }
+
+    100%{
+        transform: translateX(0);
+        
+    }
+  }
+  //Rota el Logo 
+  @keyframes logoCargaRotar{      
+        0%{
+            transform: rotate(-360deg);
+        }
+        100%{
+            transform: rotate(0deg);
+        }
+  }
