--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,110 +9,6 @@ body {
   box-sizing: border-box;
 }
 
-.carga {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(57, 62, 70, 0.9333333333);
-  line-height: 100vh;
-  z-index: 10;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  -webkit-animation: desvanecer 6s linear;
-          animation: desvanecer 6s linear;
-}
-
-@-webkit-keyframes desvanecer {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 1;
-  }
-  70% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-@keyframes desvanecer {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 1;
-  }
-  70% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-.imagenCarga {
-  width: 10rem;
-  position: absolute;
-}
-
-.carga svg {
-  width: 16rem;
-  height: 16rem;
-  transform: rotate(-90deg);
-}
-
-.carga svg circle {
-  width: 100%;
-  height: 100%;
-  fill: none;
-  stroke-width: 2;
-  stroke: rgb(19, 197, 43);
-  stroke-linecap: round;
-  stroke-dasharray: 400;
-  stroke-dashoffset: 400;
-  -webkit-animation: animateC 6s linear;
-          animation: animateC 6s linear;
-}
-
-@-webkit-keyframes animateC {
-  0% {
-    stroke-dashoffset: 400;
-  }
-  20% {
-    stroke-dashoffset: 300;
-  }
-  30% {
-    stroke-dashoffset: 240;
-  }
-  50% {
-    stroke-dashoffset: 143;
-    stroke: rgb(0, 217, 255);
-  }
-  100% {
-    stroke-dashoffset: 0;
-  }
-}
-
-@keyframes animateC {
-  0% {
-    stroke-dashoffset: 400;
-  }
-  20% {
-    stroke-dashoffset: 300;
-  }
-  30% {
-    stroke-dashoffset: 240;
-  }
-  50% {
-    stroke-dashoffset: 143;
-    stroke: rgb(0, 217, 255);
-  }
-  100% {
-    stroke-dashoffset: 0;
-  }
-}
 .navbar {
   margin: 0;
   height: 50px;
@@ -231,4 +127,239 @@ body {
 .hab-li {
   overflow: hidden;
   background-color: white;
+}
+
+#equipo {
+  font-size: 0.6em;
+  color: rgba(204, 204, 204, 0);
+  border-radius: 5px 5px 5px 5px;
+  width: 97%;
+  background: linear-gradient(270deg, rgba(1, 138, 8, 0.8078431373), hsla(110deg, 100%, 50%, 0.692));
+}
+
+#perseverancia {
+  font-size: 0.6em;
+  color: rgba(204, 204, 204, 0);
+  border-radius: 5px 5px 5px 5px;
+  width: 90%;
+  background: linear-gradient(270deg, rgba(1, 138, 8, 0.8078431373), hsla(110deg, 100%, 50%, 0.692));
+}
+
+#aprendizaje {
+  font-size: 0.6em;
+  color: rgba(204, 204, 204, 0);
+  border-radius: 5px 5px 5px 5px;
+  width: 94%;
+  background: linear-gradient(270deg, rgba(1, 138, 8, 0.8078431373), hsla(110deg, 100%, 50%, 0.692));
+}
+
+#orientacion {
+  font-size: 0.6em;
+  color: rgba(204, 204, 204, 0);
+  border-radius: 5px 5px 5px 5px;
+  width: 86%;
+  background: linear-gradient(270deg, rgba(1, 138, 8, 0.8078431373), hsla(110deg, 100%, 50%, 0.692));
+}
+
+#proyectos {
+  background-color: rgba(57, 62, 70, 0.6901960784);
+  color: white;
+  border-radius: 0px 0px 15px 15px;
+}
+
+#metodologias {
+  background-color: rgba(57, 62, 70, 0.6901960784);
+  color: white;
+  border-radius: 15px 15px 15px 15px;
+}
+
+#patrones {
+  background-color: rgba(57, 62, 70, 0.6901960784);
+  color: white;
+  border-radius: 15px 15px 15px 15px;
+}
+
+#scrum {
+  font-size: 0.6em;
+  color: rgba(204, 204, 204, 0);
+  border-radius: 5px 5px 5px 5px;
+  background: linear-gradient(270deg, rgba(106, 1, 138, 0.8078431373), hsla(110deg, 100%, 50%, 0.692));
+  width: 70%;
+}
+
+#mvc {
+  font-size: 0.6em;
+  color: rgba(204, 204, 204, 0);
+  border-radius: 5px 5px 5px 5px;
+  width: 90%;
+  background: linear-gradient(270deg, rgba(1, 33, 138, 0.8078431373), hsla(110deg, 100%, 50%, 0.692));
+}
+
+#mvp {
+  font-size: 0.6em;
+  color: rgba(204, 204, 204, 0);
+  border-radius: 5px 5px 5px 5px;
+  width: 75%;
+  background: linear-gradient(270deg, rgba(1, 33, 138, 0.8078431373), hsla(110deg, 100%, 50%, 0.692));
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+.proyectoSoft {
+  padding: 0;
+  max-width: 100%;
+  max-height: 18rem;
+  transition: transform 0.2s;
+}
+.proyectoSoft:hover {
+  transform: scale(1.1);
+}
+
+.proyecto {
+  min-height: 20rem;
+  max-height: auto;
+  margin-bottom: 10px;
+}
+
+input, textarea {
+  width: 70%;
+  margin: 10px;
+  border: none;
+}
+
+.fondo img {
+  position: absolute;
+  left: 0;
+  top: 50px;
+  max-width: 68.5%;
+}
+
+input:hover, textarea:hover {
+  width: 74%;
+  border-bottom: 1px solid rgb(0, 0, 0);
+}
+
+input[type=submit]:hover {
+  background-color: rgba(57, 62, 70, 0.9843137255);
+  color: white;
+  font-weight: bold;
+}
+
+@-webkit-keyframes mostarBarras {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes mostarBarras {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+label {
+  margin: 10px;
+}
+
+@media (max-width: 400px) {
+  #formulario input, textarea {
+    width: 100%;
+  }
+  #navbarNav {
+    background-color: rgba(57, 62, 70, 0.9333333333);
+  }
+  .tecnologias {
+    gap: 2rem;
+    grid-auto-rows: 5rem;
+    grid-template-columns: repeat(auto-fill, minmax(5rem, 1fr));
+  }
+  .imgNav {
+    max-width: 2.7rem;
+  }
+}
+@media (max-width: 990px) {
+  #formulario input, textarea {
+    width: 100%;
+  }
+  .fondo {
+    opacity: 0;
+  }
+  #navbarNav {
+    background-color: rgba(57, 62, 70, 0.9333333333);
+  }
+  .tecnologias {
+    gap: 2rem;
+    grid-auto-rows: 5rem;
+    grid-template-columns: repeat(auto-fill, minmax(5rem, 1fr));
+  }
+  .imgNav {
+    max-width: 2.7rem;
+  }
+}
+.carga {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(57, 62, 70, 0.9333333333);
+  line-height: 100vh;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  -webkit-animation: desvanecer 6s linear;
+          animation: desvanecer 6s linear;
+}
+
+.imagenCarga {
+  width: 15rem;
+  -webkit-animation: logoCargaRotar 3s;
+          animation: logoCargaRotar 3s;
+}
+
+.moverLogoCarga {
+  -webkit-animation: logoCargaEntrada 3s;
+          animation: logoCargaEntrada 3s;
+  position: absolute;
+}
+
+@-webkit-keyframes logoCargaEntrada {
+  0% {
+    transform: translateX(-1000px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes logoCargaEntrada {
+  0% {
+    transform: translateX(-1000px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@-webkit-keyframes logoCargaRotar {
+  0% {
+    transform: rotate(-360deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+@keyframes logoCargaRotar {
+  0% {
+    transform: rotate(-360deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }/*# sourceMappingURL=main.css.map */
